Modificações no JS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             </div>
         </div>
     </header>
-    <main class="conteudoPrincipal">
+    <main>
+    <div class="conteudoPrincipal">
         <div id="conteudoTexto">
             <p id="texto">Bem-vindo ao jogo aventura selvagem.<br>Informe seu nome e aperte em começar para inciar sua
                 jornada!</p>
@@ -44,6 +45,7 @@
             <input type="text" id="userName"></input>
             <button onclick="geraNome()" id="botao" class="btn">Começar</button>
         </div>
+    </div>
     </main>
     <script src="javascript/jogo.js"></script>
 </body>
